# Copyright 2024 Mist Tecnologia LTDA. All rights reserved.
# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

declare_args() {
  # Identifier for the Core SDK.
  # LINT.IfChange
  sdk_id = read_file("//integration/MILESTONE", "trim string") + ".99991231.0.1"

  # LINT.ThenChange(//build/bazel/BUILD.gn)

  # Whether to cross-compile SDK tools for all supported host toolchains,
  # rather than just the current host toolchains.
  # For example, if this is true then for instance if building on linux x64 then
  # you'll also build SDK host tools for linux arm64.
  sdk_cross_compile_host_tools = false
}
